--- a/config.cfg
+++ b/config.cfg
@@ -54,7 +54,7 @@ bind "KP_ENTER" "butt;                                            ; keycontainer
 bind "KP_DEL" "ahegao;                                          ; keycontainer"
 bind "[" "                                                 ; keycontainer"
 bind "]" "                                                 ; keycontainer"
-bind "SEMICOLON" "dc                                               ; keycontainer"
+bind "SEMICOLON" "disconnect                                       ; keycontainer"
 bind "'" "                                                 ; keycontainer"
 bind "`" "toggleconsole"
 bind "," "                                                 ; keycontainer"
@@ -142,7 +142,7 @@ c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "-1"
 c_thirdpersonshoulderoffset "-8.5"
 cachedvalue_count_partybrowser "1628218887"
-cachedvalue_count_teammates "1628508697"
+cachedvalue_count_teammates "1628554777"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -175,9 +175,9 @@ cl_cmdrate "64"
 cl_color "2"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "1"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
+cl_crosshair_dynamic_maxdist_splitratio "0"
+cl_crosshair_dynamic_splitalpha_innermod "0"
+cl_crosshair_dynamic_splitalpha_outermod "0.300000"
 cl_crosshair_dynamic_splitdist "0"
 cl_crosshair_friendly_warning "2"
 cl_crosshair_outlinethickness "1"
@@ -193,7 +193,7 @@ cl_crosshairdot "0"
 cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairsize "1.5"
-cl_crosshairstyle "3"
+cl_crosshairstyle "4"
 cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
@@ -465,7 +465,7 @@ snd_menumusic_volume "0.158886"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.1"
-snd_music_selection "2"
+snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.150578"
 snd_mute_losefocus "0"
@@ -493,7 +493,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_dust"
+sv_skyname "sky_cs15_daylight03_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -510,7 +510,7 @@ tr_best_course_time "0"
 tr_completed_training "0"
 triple_monitor_mode "0"
 trusted_launch "1"
-trusted_launch_once "0"
+trusted_launch_once "1"
 tv_nochat "0"
 ui_deepstats_radio_heat_figurine "0"
 ui_deepstats_radio_heat_tab "0"
@@ -561,7 +561,7 @@ voice_positional "1"
 voice_scale "0.9"
 voice_system_enable "1"
 voice_threshold "2000"
-volume "0.1"
+volume "0.03"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
