--- a/config.cfg
+++ b/config.cfg
@@ -33,7 +33,7 @@ bind "t" "+spray_menu                                      ; keycontainer"
 bind "u" "messagemode2"
 bind "v" "+voicerecord"
 bind "w" "+forward                                         ; keycontainer"
-bind "x" "lefthand                                         ; keycontainer"
+bind "x" "lefthand"
 bind "y" "messagemode"
 bind "z" "use weapon_flashbang                             ; keycontainer"
 bind "KP_INS" "clearchat;                                       ; keycontainer"
@@ -96,7 +96,7 @@ bind "F6" "autobuy                                          ; keycontainer"
 bind "F7" "                                                 ; keycontainer"
 bind "F8" "                                                 ; keycontainer"
 bind "F9" "                                                 ; keycontainer"
-bind "F10" "quit prompt                                      ; keycontainer"
+bind "F10" "quit_prompt                                      ; keycontainer"
 bind "F11" "                                                 ; keycontainer"
 bind "F12" "                                                 ; keycontainer"
 bind "NUMLOCKTOGGLE" "                                                 ; keycontainer"
@@ -142,7 +142,7 @@ c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "-1"
 c_thirdpersonshoulderoffset "-8.5"
 cachedvalue_count_partybrowser "1628218887"
-cachedvalue_count_teammates "1628554777"
+cachedvalue_count_teammates "1628597785"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -170,7 +170,7 @@ cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "0"
+cl_clanid "35310767"
 cl_cmdrate "64"
 cl_color "2"
 cl_compass_enabled "1"
@@ -190,12 +190,12 @@ cl_crosshaircolor_b "255"
 cl_crosshaircolor_g "250"
 cl_crosshaircolor_r "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-3"
+cl_crosshairgap "-2"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1.5"
+cl_crosshairsize "1"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
-cl_crosshairusealpha "1"
+cl_crosshairusealpha "0"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
 cl_detail_avoid_radius "64"
@@ -213,7 +213,7 @@ cl_fixedcrosshairgap "-4"
 cl_forcepreload "1"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
-cl_hide_avatar_images "0"
+cl_hide_avatar_images "2"
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "-1"
@@ -399,7 +399,7 @@ mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "0"
 name "Fin ⁧ ⁧「Femboys」"
 net_allow_multicast "1"
-net_graph "1"
+net_graph "2"
 net_graphheight "9999"
 net_graphholdsvframerate "1"
 net_graphipc "1"
@@ -465,7 +465,7 @@ snd_menumusic_volume "0.158886"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.1"
-snd_music_selection "1"
+snd_music_selection "2"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.150578"
 snd_mute_losefocus "0"
@@ -493,7 +493,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_cs15_daylight03_hdr"
+sv_skyname "sky_dust"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
