--- a/config.cfg
+++ b/config.cfg
@@ -1,41 +1,41 @@
 cfgver "1"
 unbindall
-bind "0" "slot0                                            ; keycontainer"
-bind "1" "slot1                                            ; keycontainer"
-bind "2" "slot2                                            ; keycontainer"
-bind "3" "+autoknifeinspect                                ; keycontainer"
-bind "4" "                                                 ; keycontainer"
-bind "5" "slot5                                            ; keycontainer"
-bind "6" "slot6                                            ; keycontainer"
-bind "7" "slot7                                            ; keycontainer"
-bind "8" "slot8                                            ; keycontainer"
-bind "9" "slot9                                            ; keycontainer"
-bind "a" "+moveleft                                        ; keycontainer"
-bind "b" "buymenu                                          ; keycontainer"
-bind "c" "slot8                                            ; keycontainer"
-bind "d" "+moveright                                       ; keycontainer"
-bind "e" "+defuse                                          ; keycontainer"
-bind "f" "+lookatweapon                                    ; keycontainer"
-bind "g" "drop                                             ; keycontainer"
-bind "h" "+spin                                            ; keycontainer"
-bind "i" "                                                 ; keycontainer"
-bind "j" "                                                 ; keycontainer"
+bind "0" "slot9;                                           ; keycontainer"
+bind "1" "                                                 ; keycontainer"
+bind "2" "slot1;                                           ; keycontainer"
+bind "3" "slot2;                                           ; keycontainer"
+bind "4" "+autoknifeinspect;                               ; keycontainer"
+bind "5" "cast_ray;                                        ; keycontainer"
+bind "6" "slot5;                                           ; keycontainer"
+bind "7" "slot6;                                           ; keycontainer"
+bind "8" "slot7;                                           ; keycontainer"
+bind "9" "slot8;                                           ; keycontainer"
+bind "a" "                                                 ; keycontainer"
+bind "b" "+voicerecord"
+bind "c" "handswap;                                        ; keycontainer"
+bind "d" "+back;                                           ; keycontainer"
+bind "e" "+forward;                                        ; keycontainer"
+bind "f" "+moveright;                                      ; keycontainer"
+bind "g" "+lookatweapon;                                   ; keycontainer"
+bind "h" "drop;                                            ; keycontainer"
+bind "i" "messagemode2"
+bind "j" "+spin;                                           ; keycontainer"
 bind "k" "                                                 ; keycontainer"
 bind "l" "                                                 ; keycontainer"
-bind "m" "radio1                                           ; keycontainer"
-bind "n" "radio2                                           ; keycontainer"
+bind "m" "radio2;                                          ; keycontainer"
+bind "n" "buymenu;                                         ; keycontainer"
 bind "o" "                                                 ; keycontainer"
 bind "p" "                                                 ; keycontainer"
-bind "q" "slot10                                           ; keycontainer"
-bind "r" "+reload; rc                                      ; keycontainer"
-bind "s" "+back                                            ; keycontainer"
-bind "t" "+spray_menu                                      ; keycontainer"
-bind "u" "messagemode2"
-bind "v" "+voicerecord"
-bind "w" "+forward                                         ; keycontainer"
-bind "x" "lefthand                                         ; keycontainer"
-bind "y" "messagemode"
-bind "z" "use weapon_flashbang                             ; keycontainer"
+bind "q" "                                                 ; keycontainer"
+bind "r" "+defuse;                                         ; keycontainer"
+bind "s" "+moveleft;                                       ; keycontainer"
+bind "t" "+reload; rc;                                     ; keycontainer"
+bind "u" "messagemode"
+bind "v" "slot8;                                           ; keycontainer"
+bind "w" "slot10;                                          ; keycontainer"
+bind "x" "use weapon_flashbang;                            ; keycontainer"
+bind "y" "+spray_menu                                      ; keycontainer"
+bind "z" "                                                 ; keycontainer"
 bind "KP_INS" "clearchat;                                       ; keycontainer"
 bind "KP_END" "                                                 ; keycontainer"
 bind "KP_DOWNARROW" "                                                 ; keycontainer"
@@ -47,26 +47,26 @@ bind "KP_HOME" "                                                 ; keycontainer"
 bind "KP_UPARROW" "                                                 ; keycontainer"
 bind "KP_PGUP" "                                                 ; keycontainer"
 bind "KP_SLASH" "                                                 ; keycontainer"
-bind "KP_MULTIPLY" "-console                                         ; keycontainer"
-bind "KP_MINUS" "condump; exec autoexec.cfg                       ; keycontainer"
+bind "KP_MULTIPLY" "-console;                                        ; keycontainer"
+bind "KP_MINUS" "condump; exec autoexec.cfg;                      ; keycontainer"
 bind "KP_PLUS" "onlyfans;                                        ; keycontainer"
 bind "KP_ENTER" "butt;                                            ; keycontainer"
 bind "KP_DEL" "ahegao;                                          ; keycontainer"
 bind "[" "                                                 ; keycontainer"
 bind "]" "                                                 ; keycontainer"
-bind "SEMICOLON" "disconnect                                       ; keycontainer"
+bind "SEMICOLON" "disconnect;                                      ; keycontainer"
 bind "'" "                                                 ; keycontainer"
 bind "`" "toggleconsole"
-bind "," "                                                 ; keycontainer"
-bind "." "buyammo2                                         ; keycontainer"
-bind "/" "                                                 ; keycontainer"
+bind "," "radio1;                                          ; keycontainer"
+bind "." "                                                 ; keycontainer"
+bind "/" "buyammo2;                                        ; keycontainer"
 bind "\" "                                                 ; keycontainer"
-bind "-" "slot11                                           ; keycontainer"
-bind "=" "slot12                                           ; keycontainer"
+bind "-" "slot0;                                           ; keycontainer"
+bind "=" "slot11;                                          ; keycontainer"
 bind "ENTER" "                                                 ; keycontainer"
 bind "SPACE" "+cjump                                           ; keycontainer"
-bind "BACKSPACE" "                                                 ; keycontainer"
-bind "TAB" "+scorenet                                        ; keycontainer"
+bind "BACKSPACE" "slot12;                                          ; keycontainer"
+bind "TAB" "+scorenet;                                       ; keycontainer"
 bind "CAPSLOCK" "                                                 ; keycontainer"
 bind "NUMLOCK" "                                                 ; keycontainer"
 bind "ESCAPE" "cancelselect"
@@ -77,7 +77,7 @@ bind "END" "                                                 ; keycontainer"
 bind "PGUP" "                                                 ; keycontainer"
 bind "PGDN" "                                                 ; keycontainer"
 bind "PAUSE" "pause"
-bind "SHIFT" "+loudshift                                       ; keycontainer"
+bind "SHIFT" "+loudshift;                                      ; keycontainer"
 bind "RSHIFT" "; +loudshift                                     ; keycontainer"
 bind "ALT" "                                                 ; keycontainer"
 bind "RALT" "                                                 ; keycontainer"
@@ -89,14 +89,14 @@ bind "DOWNARROW" "                                                 ; keycontaine
 bind "RIGHTARROW" "+right;                                          ; keycontainer"
 bind "F1" "                                                 ; keycontainer"
 bind "F2" "                                                 ; keycontainer"
-bind "F3" "+radialradio                                     ; keycontainer"
-bind "F4" "clutch_mode_toggle                               ; keycontainer"
-bind "F5" "jpeg * 100;                                      ; keycontainer"
-bind "F6" "autobuy                                          ; keycontainer"
-bind "F7" "                                                 ; keycontainer"
+bind "F3" "                                                 ; keycontainer"
+bind "F4" "+radialradio;                                    ; keycontainer"
+bind "F5" "clutch_mode_toggle;                              ; keycontainer"
+bind "F6" "jpeg * 100;                                      ; keycontainer"
+bind "F7" "autobuy;                                         ; keycontainer"
 bind "F8" "                                                 ; keycontainer"
 bind "F9" "                                                 ; keycontainer"
-bind "F10" "quit_prompt                                      ; keycontainer"
+bind "F10" "quit_prompt;                                     ; keycontainer"
 bind "F11" "                                                 ; keycontainer"
 bind "F12" "                                                 ; keycontainer"
 bind "NUMLOCKTOGGLE" "                                                 ; keycontainer"
@@ -141,8 +141,8 @@ c_thirdpersonshoulderaimdist "720"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "-1"
 c_thirdpersonshoulderoffset "-8.5"
-cachedvalue_count_partybrowser "1630116885"
-cachedvalue_count_teammates "1630129429"
+cachedvalue_count_partybrowser "1630528780"
+cachedvalue_count_teammates "1630529559"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -465,7 +465,7 @@ snd_menumusic_volume "0.297428"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.1"
-snd_music_selection "1"
+snd_music_selection "2"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.150578"
 snd_mute_losefocus "0"
@@ -529,8 +529,8 @@ ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
 ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_dust247"
 ui_playsettings_maps_workshop "@workshop/2569857729/orange_aim_map_update1"
-ui_playsettings_mode_listen "deathmatch"
-ui_playsettings_mode_official_v20 "deathmatch"
+ui_playsettings_mode_listen "competitive"
+ui_playsettings_mode_official_v20 "competitive"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "3"
@@ -543,10 +543,10 @@ ui_vanitysetting_loadoutslot_ct "secondary1"
 ui_vanitysetting_loadoutslot_t "rifle4"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
-viewmodel_fov "54"
-viewmodel_offset_x "2.50"
-viewmodel_offset_y "-2.0"
-viewmodel_offset_z "-2.0"
+viewmodel_fov "60"
+viewmodel_offset_x "1"
+viewmodel_offset_y "1"
+viewmodel_offset_z "-1"
 viewmodel_presetpos "1"
 viewmodel_recoil "0"
 voice_caster_enable "0"
@@ -561,7 +561,7 @@ voice_positional "1"
 voice_scale "1.000000"
 voice_system_enable "1"
 voice_threshold "2000"
-volume "0"
+volume "0.1"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
