--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -1,22 +1,22 @@
 // VALVE: these keys are defined in controller.cfg, config.360.cfg, AND controller.360.cfg
 // VALVE: Key bindings
-bind "A_BUTTON" "+jump"
-bind "B_BUTTON" "+reload"
-bind "X_BUTTON" "+use"
-bind "Y_BUTTON" "invnextnongrenade"
-bind "L_SHOULDER" "invnextitem"
-bind "R_SHOULDER" "+lookspin"
-bind "BACK" "togglescores"
-bind "START" "gameui_activate"		// (start) button - pause
-
-bind "L_TRIGGER" "+duck"
-bind "R_TRIGGER" "+attack"
-
-bind "STICK2"			"+attack2"
-bind "S1_UP"			"xmove"
-bind "S2_UP"			"xlook"
-
-bind "DOWN" "drop"
+// VALVE: bind "A_BUTTON" "+jump"
+// VALVE: bind "B_BUTTON" "+reload"
+// VALVE: bind "X_BUTTON" "+use"
+// VALVE: bind "Y_BUTTON" "invnextnongrenade"
+// VALVE: bind "L_SHOULDER" "invnextitem"
+// VALVE: bind "R_SHOULDER" "+lookspin"
+// VALVE: bind "BACK" "togglescores"
+// VALVE: bind "START" "gameui_activate"		// (start) button - pause
+//
+// VALVE: bind "L_TRIGGER" "+duck"
+// VALVE: bind "R_TRIGGER" "+attack"
+//
+// VALVE: bind "STICK2"			"+attack2"
+// VALVE: bind "S1_UP"			"xmove"
+// VALVE: bind "S2_UP"			"xlook"
+//
+// VALVE: bind "DOWN" "drop"
 
 // *** cl_inv_showdividerline  "2"            *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
 // VALVE: Key bindings end
