--- a/practice.cfg
+++ b/practice.cfg
@@ -3,6 +3,10 @@ sv_cheats "1"
 bot_kick
 mp_warmup_end
 
+// Set the server to Competitive
+game_mode 1
+game_type 0
+
 // Turn off team limits and team auto balance
 mp_limitteams "0"           // Number of extra players one team can have over another 0: Disables any limits
 mp_autoteambalance "0"      // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
@@ -70,7 +74,3 @@ sv_regeneration_force_on 1  // Enable health regeneration
 
 // Restart the match to ensure all changes have been applied
 mp_restartgame 1
-
-// Bind some helpful practice commands
-//bind MOUSE4 noclip
-//bind MOUSE5 cast_ray
