--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@ videodefaults.txt
 ## Information about CSGO's Trust Launch security feature
 trustedlaunch.cfg
 
+## No idea what this is for, seems to store last map and your STEAMID
+qmmconnect.dt
+
+
 # Microsoft Visual Studio Code
 .vscode/
