--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -1,99 +1,94 @@
 // VALVE: these keys are defined in controller.cfg, config.360.cfg, AND controller.360.cfg
-// VALVE: Key bindings
-// VALVE: bind "A_BUTTON" "+jump"
-// VALVE: bind "B_BUTTON" "+reload"
-// VALVE: bind "X_BUTTON" "+use"
-// VALVE: bind "Y_BUTTON" "invnextnongrenade"
-// VALVE: bind "L_SHOULDER" "invnextitem"
-// VALVE: bind "R_SHOULDER" "+lookspin"
-// VALVE: bind "BACK" "togglescores"
-// VALVE: bind "START" "gameui_activate"		// (start) button - pause
-//
-// VALVE: bind "L_TRIGGER" "+duck"
-// VALVE: bind "R_TRIGGER" "+attack"
-//
-// VALVE: bind "STICK2"			"+attack2"
-// VALVE: bind "S1_UP"			"xmove"
-// VALVE: bind "S2_UP"			"xlook"
-//
-// VALVE: bind "DOWN" "drop"
+// VALVE: bind "A_BUTTON"   "+jump";
+// VALVE: bind "B_BUTTON"   "+reload";
+// VALVE: bind "X_BUTTON"   "+use";
+// VALVE: bind "Y_BUTTON"   "invnextnongrenade";
+// VALVE: bind "L_SHOULDER" "invnextitem";
+// VALVE: bind "R_SHOULDER" "+lookspin";
+// VALVE: bind "BACK"       "togglescores";
+// VALVE: bind "START"      "gameui_activate";    // (start) button - pause
 
-// *** cl_inv_showdividerline  "2"            *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// VALVE: Key bindings end
+// VALVE: bind "L_TRIGGER"  "+duck";
+// VALVE: bind "R_TRIGGER"  "+attack";
 
-// *** binds_per_command		"1"               *** IN DEFAULT controller.360.cfg BUT IS NO LONGER IN AN EXISTENT CONVAR ***
-// *** hud_fastswitch			"2"                 *** IN DEFAULT controller.360.cfg BUT IS NO LONGER IN AN EXISTENT CONVAR ***
-sk_autoaim_mode			"2"
+// VALVE: bind "STICK2"     "+attack2";
+// VALVE: bind "S1_UP"      "xmove";
+// VALVE: bind "S2_UP"      "xlook";
 
-// VALVE: JOYSTICK SETTINGS
-// *** joy_useNewAcecelMethod "0"             *** IN DEFAULT controller.360.cfg BUT IS NO LONGER IN AN EXISTENT CONVAR ***
+// VALVE: bind "DOWN"       "drop";
 
-joy_name 			"Xbox controller"
-joy_advanced 			"1"
-joy_advaxisx 			"3"
-joy_advaxisy 			"1"
-joy_advaxisz 			"0"
-joy_advaxisr 			"2"
-joy_advaxisu 			"4"
-joy_advaxisv 			"0"
 
-joy_forwardsensitivity 		"-1.0"
-joy_sidesensitivity 		"1"
-joy_forwardthreshold 		"0.1"	// movement dead zone settings
-joy_sidethreshold 			"0.1"
-joy_pitchsensitivity 			"-0.85"
-// *** joy_pitchsensitivity_default	"-0.85"   *** IN DEFAULT controller.360.cfg BUT IS NO LONGER IN AN EXISTENT CONVAR ***
-joy_yawsensitivity 				"-0.9"
-// *** joy_yawsensitivity_default 		"-0.9"  *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-joy_pitchthreshold 				"0.025"		// look dead zone settings
-joy_yawthreshold 				"0.0"
+sk_autoaim_mode                 "2";
 
-joy_curvepoint_1	"0.005"
-joy_curvepoint_2	"0.1"
-joy_curvepoint_3	"0.4"
-joy_curvepoint_4	"0.8"
-joy_curvepoint_end	"2"
+joy_name                        "Xbox controller";
+joy_advanced                    "1";
+joy_advaxisr                    "2";
+joy_advaxisu                    "4";
+joy_advaxisv                    "0";
+joy_advaxisx                    "3";
+joy_advaxisy                    "1";
+joy_advaxisz                    "0";
 
-////
-// *** joy_useNewJoystickPeggedTest		"0"     *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+joy_pitchsensitivity            "-0.85";
+joy_pitchthreshold              "0.025";          // look dead zone settings
+joy_yawsensitivity              "-0.9";
+joy_sidethreshold               "0.1";
+joy_yawthreshold                "0.0";
+joy_sidesensitivity             "1";
+joy_forwardthreshold            "0.1";            // movement dead zone settings
+joy_forwardsensitivity          "-1.0";
+
+joy_curvepoint_1                "0.005";
+joy_curvepoint_2                "0.1";
+joy_curvepoint_3                "0.4";
+joy_curvepoint_4                "0.8";
+joy_curvepoint_end              "2";
+
 //(auto aim dampening)
-joy_autoAimDampenMethod				1
-joy_autoaimdampenrange				"0.99"
-joy_autoaimdampen					"0.4"
+joy_autoAimDampenMethod         "1";
+joy_autoaimdampenrange          "0.99";
+joy_autoaimdampen               "0.4";
 
-// *** joy_variable_frametime 1               *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-joy_lowend 			"0.35"
-joy_lowmap 			"0.1"
+joy_lowend                      "0.35";
+joy_lowmap                      "0.1";
 
-joy_gamma				"0.1"
-joy_accelscale 			"6.0"
-joy_accelscalepoly		"0.5"
-joy_accelmax 			"1.0"
-// *** joy_accel_filter		"0.9"               *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+joy_gamma                       "0.1";
+joy_accelmax                    "1.0";
+joy_accelscale                  "6.0";
+joy_accelscalepoly              "0.5";
 
-// *** joy_pegged				"0.8"                 *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** cl_pitchspeed			"180"               *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-joy_response_move 		"5"
-joy_response_look		"0"
-joy_response_look_pitch "0"
+joy_response_move               "5";
+joy_response_look               "0";
+joy_response_look_pitch         "0";
 
-// *** joy_virtual_peg			"1"               *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
 
-joy_inverty				"0"
-joy_movement_stick		"0"
+joy_inverty                     "0";
+joy_movement_stick              "0";
 
-zoom_sensitivity_ratio_joystick "0.7"
+zoom_sensitivity_ratio_joystick "0.7";
 
-// *** joy_lookspin_default	"0.25"            *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// VALVE: JOYSTICK SETTINGS
 
 joystick 1
-// *** option_speed_method_default		"0"     *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
 
-cl_autowepswitch		"1"
-option_duck_method		"0"
-option_speed_method		"0"
+cl_autowepswitch                "1";
+option_duck_method              "0";
+option_speed_method             "0";
 
-cl_rumblescale			"1.0"
+cl_rumblescale                  "1.0";
 -speed // VALVE: don't start off in the slow (walking) state
 +jlook // VALVE: allow looking up and down
+
+// *** joy_pitchsensitivity_default "-0.85";      *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_yawsensitivity_default   "-0.9";       *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_lookspin_default         "0.25";       *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_accel_filter             "0.9";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_pegged                   "0.8";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** cl_pitchspeed                "180";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** hud_fastswitch               "2";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_virtual_peg              "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** binds_per_command            "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** cl_inv_showdividerline       "2";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_variable_frametime       "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_useNewAcecelMethod       "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** option_speed_method_default  "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+// *** joy_useNewJoystickPeggedTest "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
