--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,6 @@
 clear;
 echo "Loading";
-echo "Fin#1337's CSGO Config v3.0.4";
+echo "Fin#1337's CSGO Config v3.0.5-rc1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
 echo "https://settings.gg/bigfinfrank";
@@ -14,26 +14,25 @@ echo "";
 // =                                                                                                                                           =
 // =                                  !!! Each bullet point is something different, read them all please. !!!                                  =
 // =                                                                                                                                           =
-// = - THIS WILL OVERWRITE YOUR EXISTING BINDS ALONG WITH VARIOUS SETTINGS **ENTIRELY**.                                                       =
+// = - THIS WILL OVERWRITE YOUR EXISTING BINDS AND A LOT OF SETTINGS **ENTIRELY**.                                                             =
 // =                                                                                                                                           =
-// = - If you're playing on non-64 tick servers you will need to go to 1.2 and replace 64tick with the the tickrate of the servers you play on =
+// = - If you're playing on non-64 tick servers you will need to go to 1.2 and replace 64tick with the tickrate of the servers you play on     =
 // =                                                                                                                                           =
 // = - YOU NEED TO UPDATE sv_contact! By default it's my email. Make it your email or just remove it altogether, just don't leave it as mine.  =
 // =                                                                                                                                           =
 // = - The crouch jump bind has a known issue where if you use it while dead/spectating it will bug out your camera until you respawn, So      =
 // =   don't freak out if people are killing people through un-wallbang-able surfaces, moving at full speed while crouching, or shooting       =
-// =   people they can't see, the first two would require hacking Valve's physical server and the third would if they're getting non-wallbang  =
-// =   kills through walls.                                                                                                                    =
+// =   people they can't see, all three of these would require modifying the server file itself or an extremely powerful zero-day exploit.     =
 // =                                                                                                                                           =
 // ==================================================================IMPORTANT==================================================================
 
 
 echo "[0.0] Initializing";
 sv_pure "1";                                                    // Forces all client files to match the server's (except for whitelisted ones)
-sv_contact "csgo@fin.fail";                                     // Contact email for server sysop (please change this)
+sv_contact "cfg@fin.fail";                                      // Contact email for server sysop (please change this)
 sv_steamauth_enforce "2";                                       // Requires connection to steam servers for VAC
 exec "fixed_controller.360.cfg";                                // Enables controller support
-hostname "Fin's CSGO Config 3.0.4 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "Fin's CSGO Config 3.0.5-rc1 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
 
 
 
@@ -601,7 +600,7 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's CSGO Config v3.0.4";
+echo "Fin#1337's CSGO Config v3.0.5-rc1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
 echo "https://settings.gg/bigfinfrank";
