Initial TF2 Support

--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -1,22 +1,25 @@
 // VALVE: these keys are defined in controller.cfg, config.360.cfg, AND controller.360.cfg
-// VALVE: bind "A_BUTTON"   "+jump";
-// VALVE: bind "B_BUTTON"   "+reload";
-// VALVE: bind "X_BUTTON"   "+use";
-// VALVE: bind "Y_BUTTON"   "invnextnongrenade";
-// VALVE: bind "L_SHOULDER" "invnextitem";
-// VALVE: bind "R_SHOULDER" "+lookspin";
-// VALVE: bind "BACK"       "togglescores";
-// VALVE: bind "START"      "gameui_activate";    // (start) button - pause
-
-// VALVE: bind "L_TRIGGER"  "+duck";
-// VALVE: bind "R_TRIGGER"  "+attack";
-
-// VALVE: bind "STICK2"     "+attack2";
-// VALVE: bind "S1_UP"      "xmove";
-// VALVE: bind "S2_UP"      "xlook";
-
-// VALVE: bind "DOWN"       "drop";
-
+//bind "Z AXIS POS" "+attack2"	// L TRIGGER
+//bind "Z AXIS NEG" "+attack"		// R TRIGGER
+//
+//bind "JOY1" "+jump"				// A
+//bind "JOY2" "+reload"			// B
+//bind "JOY3" "+context_action"	// X
+//bind "JOY4" "togglescores"		// Y
+//
+//bind "JOY5" "invprev"			// L SHOULDER
+//bind "JOY6" "invnext"			// R SHOULDER
+//
+//bind "JOY7" "changeclass"		// BACK
+//bind "JOY8" "pause"			// START
+//
+//bind "JOY10" "voicemenu 0 0"		// Right Stick Down
+//bind "JOY9" "+duck"			// Left Stick Down
+//
+//bind "POV_UP" "slot1"
+//bind "POV_RIGHT" "slot2"
+//bind "POV_DOWN" "slot3"
+//bind "POV_LEFT" "slot4"
 
 sk_autoaim_mode                 "2";
 
@@ -29,66 +32,41 @@ joy_advaxisx                    "3";
 joy_advaxisy                    "1";
 joy_advaxisz                    "0";
 
-joy_pitchsensitivity            "-0.85";
+joy_pitchsensitivity            "1.0";
 joy_pitchthreshold              "0.025";          // look dead zone settings
-joy_yawsensitivity              "-0.9";
+joy_yawsensitivity              "-1.25";
 joy_sidethreshold               "0.1";
 joy_yawthreshold                "0.0";
 joy_sidesensitivity             "1";
 joy_forwardthreshold            "0.1";            // movement dead zone settings
-joy_forwardsensitivity          "-1.0";
-
-joy_curvepoint_1                "0.005";
-joy_curvepoint_2                "0.1";
-joy_curvepoint_3                "0.4";
-joy_curvepoint_4                "0.8";
-joy_curvepoint_end              "2";
+joy_forwardsensitivity          "-1";
 
 //(auto aim dampening)
-joy_autoAimDampenMethod         "1";
-joy_autoaimdampenrange          "0.99";
-joy_autoaimdampen               "0.4";
+joy_autoaimdampenrange          "0.85";
+joy_autoaimdampen               "0.5";
 
-joy_lowend                      "0.35";
-joy_lowmap                      "0.1";
+joy_lowend                      "0.65";
+joy_lowmap                      "0.15";
 
-joy_gamma                       "0.1";
-joy_accelmax                    "1.0";
-joy_accelscale                  "6.0";
-joy_accelscalepoly              "0.5";
+joy_accelmax                    "2.0";
+joy_accelscale                  "2.0";
 
-joy_response_move               "5";
-joy_response_look               "0";
-joy_response_look_pitch         "0";
+joy_response_move               "0";
+joy_response_look               "1";
 
 
 joy_inverty                     "0";
 joy_movement_stick              "0";
+joyadvancedupdate;
 
-zoom_sensitivity_ratio_joystick "0.7";
+joystick "1";
+hud_fastswitch                  "2";
 
-
-joystick 1
-
-cl_autowepswitch                "1";
 option_duck_method              "0";
-option_speed_method             "0";
 
 cl_rumblescale                  "1.0";
 -speed // VALVE: don't start off in the slow (walking) state
 +jlook // VALVE: allow looking up and down
 
-// *** joy_pitchsensitivity_default "-0.85";      *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_yawsensitivity_default   "-0.9";       *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_lookspin_default         "0.25";       *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_accel_filter             "0.9";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_pegged                   "0.8";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** cl_pitchspeed                "180";        *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** hud_fastswitch               "2";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_virtual_peg              "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** binds_per_command            "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** cl_inv_showdividerline       "2";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_variable_frametime       "1";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_useNewAcecelMethod       "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** option_speed_method_default  "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
-// *** joy_useNewJoystickPeggedTest "0";          *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
+tf_build_menu_controller_mode    "1";
+tf_disguise_menu_controller_mode "1";
