--- a/practice.cfg
+++ b/practice.cfg
@@ -1,76 +1,128 @@
 // Setup
-sv_cheats "1"
-bot_kick
-mp_warmup_end
+sv_cheats "1";              // Enable cheat commands
+bot_kick all;               // Kick all bots from the server
+///mp_warmup_end;              // End the match's warmup
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Set the server to Competitive
-game_mode "1"
-game_type "0"
+///game_type "0";              // Sets the game type to Classic - https://developer.valvesoftware.com/wiki/CSGO_Game_Mode_Commands
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///game_mode "1";              // Sets the game mode to Competitive
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Turn off team limits and team auto balance
-mp_autoteambalance "0"      // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
-mp_limitteams "0"           // Number of extra players one team can have over another 0: Disables any limits
+mp_autoteambalance "0";     // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
+///mp_limitteams "0";          // Number of extra players one team can have over another 0: Disables any limits
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Adjust buy menu-related settings
-mp_items_prohibited "0"     // Turn off all item limitations
-mp_buytime "2147483647"     // Determines how long players can buy
-mp_buy_anywhere "1"         // 0: Players can buy in buy zones 1: Players can buy anywhere
+///mp_items_prohibited "0";    // Turn off all item limitations
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+//mp_buytime "2147483647";    // Determines how long players can buy
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+//mp_buy_anywhere "1";        // 0: Players can buy in buy zones 1: Players can buy anywhere
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Makes limits as high as they can go
-mp_maxrounds "2147483647"   // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
-mp_c4timer "2147483647"     // Determines how much time is between the bomb being planted and it exploding
-mp_timelimit "0"            // Disables the overall match time limit
-mp_roundtime "60"           // Sets the default round time to last 60 minutes
-mp_roundtime_defuse "60"    // Sets defuse gamemode rounds to last 60 minutes
-mp_roundtime_hostage "60"   // Sets hostage gamemode rounds to last 60 minutes
-mp_roundtime_deployment "60"// Sets deployment time in co-op modes to last 60 minutes
+mp_maxrounds "2147483647";              // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
+//mp_c4timer "2147483647";                // Determines how much time is between the bomb being planted and it exploding
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+mp_timelimit "0";                       // Disables the overall match time limit
+//mp_roundtime "60";                      // Sets the default round time to last 60 minutes
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+//mp_roundtime_defuse "60";               // Sets defuse gamemode rounds to last 60 minutes
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+//mp_roundtime_hostage "60";              // Sets hostage gamemode rounds to last 60 minutes
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+//mp_roundtime_deployment "60";           // Sets deployment time in co-op modes to last 60 minutes
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Make delays as short as possible
-mp_round_restart_delay "1"  // Determines how much time there is at the end of a round before the next one starts
-mp_halftime_duration "0"    // Determines how long the halftime screen with the scoreboard shows
-mp_freezetime "0"
-mp_halftime "0"             // Turns switching sides at the halfway point on or off
+///mp_round_restart_delay "1"; // Determines how much time there is at the end of a round before the next one starts
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_halftime_duration "0";   // Determines how long the halftime screen with the scoreboard shows
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_freezetime "0";
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_halftime "0";            // Turns switching sides at the halfway point on or off
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Make the match restart instead of swapping to a new map
-mp_match_restart_delay "3"  // Determines how long the delay should be before the match restarts
-mp_match_end_restart "1"    // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
+///mp_match_restart_delay "3"; // Determines how long the delay should be before the match restarts
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_match_end_restart "1";   // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Makes players respawn on death automatically (like in deathmatch)
-mp_respawn_on_death_ct "1"  // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
-mp_respawn_on_death_t "1"   // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
+///mp_respawn_on_death_ct "1"; // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_respawn_on_death_t "1";  // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Makes ammo unlimited
-sv_infinite_ammo "1"        // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
+///sv_infinite_ammo "1";       // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Gives people as much money as possible
-mp_overtime_startmoney "65535" // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
-mp_startmoney "65535"       // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
-mp_maxmoney "65535"         // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+///mp_overtime_startmoney "65535";         // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_startmoney "65535";                  // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_maxmoney "65535";                    // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Item/Grenade limits
-ammo_grenade_limit_breachcharge "255"
-ammo_grenade_limit_snowballs "255"
-ammo_grenade_limit_flashbang "255"
-ammo_grenade_limit_bumpmine "255"
-ammo_grenade_limit_default "255"
-ammo_grenade_limit_total "32767"
-ammo_item_limit_healthshot "255"
+///ammo_grenade_limit_breachcharge "255";  // Sets the max number of breach charges the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_grenade_limit_snowballs "255";     // Sets the max number of snowballs the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_grenade_limit_flashbang "255";     // Sets the max number of flashbangs the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_grenade_limit_bumpmine "255";      // Sets the max number of bump mines the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_grenade_limit_default "255";       // Sets the default max number of grenade slots items the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_grenade_limit_total "32767";       // Sets the max total number of items the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///ammo_item_limit_healthshot "255";       // Sets the max number of healthshots the player can have
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
-// Drop everything
-mp_drop_knife_enable "1"
-mp_drop_grenade_enable "1"
-mp_anyone_can_pickup_c4 "1"
+// Let players their knives, grenades, and bombs for anyone on either team to pick up.
+///mp_drop_knife_enable "1";               // Lets players drop their knives
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_drop_grenade_enable "1";             // Lets players drop their grenades
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///mp_anyone_can_pickup_c4 "1";            // Lets anyone (including CTs) pick up the bomb
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Spray practice
-sv_showimpacts "1"            // 0: Don't show impact boxes 1: Show grenade and bullet impacts
-sv_showimpacts_time "10"      // Show the impact times for the set number of seconds
+///sv_showimpacts "1";                     // 0: Don't show impact boxes 1: Show grenade and bullet impacts
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///sv_showimpacts_time "10";               // Show the impact times for the set number of seconds
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Grenade practice
-sv_grenade_trajectory "1"
-sv_grenade_trajectory_time "10"
+///sv_grenade_trajectory "1";
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+///sv_grenade_trajectory_time "10";
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Enables health regeneration, this effectively turns on buddha mode without one-shot immunity
-sv_regeneration_force_on "1"  // Enable health regeneration
+///sv_regeneration_force_on "1";           // Enable health regeneration
+/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
 // Restart the match to ensure all changes have been applied
-mp_restartgame "1"
+mp_restartgame "1";                     // Restart the current MATCH, this does not restart the entire game
+
+echo "";
+echo "";
+echo "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!";
+echo "!                                                                      !";
+echo "! WARNING: This has not been updated to properly support TF2 *YET*.    !";
+echo "! WARNING: It doesn't actually do much in TF2 besides enabling cheats. !";
+echo "!                                                                      !";
+echo "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!";
+echo "";
+echo "";
+
+
